cabal-version:       2.4
name:                leetcode-hs
version:             0.1.0.0
synopsis:            Leetcode solutions implemented in Haskell and C
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isumi Feng
maintainer:          contact@zelinf.net
copyright:           2018 Isumi Feng
category:            Education

flag debug-c
  default: False
  manual: True

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base
    , text
    , bytestring
    , vector
    , containers
    , mtl
    , transformers
  exposed-modules:
      LeetCode.Foreign
    , LeetCode.P12
    , LeetCode.P13
    , LeetCode.P14
    , LeetCode.P15
  c-sources:
      csrc/p12.c
      csrc/p13.c
      csrc/p14.c
      csrc/p15.c
      csrc/p16.c
      csrc/p17.c
      csrc/p20.c
  if flag(debug-c)
    cc-options: -g -O0

test-suite leetcode-hs-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  default-language: Haskell2010
  ghc-options: -Wall
  other-modules:
      LeetCode.P12Spec
    , LeetCode.P13Spec
    , LeetCode.P14Spec
    , LeetCode.P15Spec
    , LeetCode.Test.Utils
  build-depends:
      base
    , leetcode-hs
    , text
    , hspec
    , QuickCheck
    , containers
  build-tool-depends:
      hspec-discover:hspec-discover
