cabal-version:       2.4
name:                leetcode-hs
version:             0.1.0.0
synopsis:            Leetcode solutions implemented in Haskell and C
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isumi Feng
maintainer:          contact@zelinf.net
copyright:           2018 Isumi Feng
category:            Education
extra-source-files:
  csrc/src/**/*.c
  csrc/src/**/*.cpp
  csrc/src/**/*.h

custom-setup
  setup-depends:
      base
    , Cabal
    , cabal-bundle-clib

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base
    , text
    , bytestring
    , vector
    , containers
    , mtl
    , transformers
    , vector-algorithms
  exposed-modules:
      LeetCode.Foreign
    , LeetCode.P12
    , LeetCode.P13
    , LeetCode.P14
    , LeetCode.P15
    , LeetCode.P16
    , LeetCode.P17
    , LeetCode.P19
    , LeetCode.P20
  extra-libraries:
      stdc++

test-suite leetcode-hs-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  default-language: Haskell2010
  ghc-options: -Wall
  other-modules:
      LeetCode.Test.Utils
    , LeetCode.P12Spec
    , LeetCode.P13Spec
    , LeetCode.P14Spec
    , LeetCode.P15Spec
    , LeetCode.P16Spec
    , LeetCode.P17Spec
    , LeetCode.P19Spec
    , LeetCode.P20Spec
  build-depends:
      base
    , leetcode-hs
    , text
    , hspec
    , QuickCheck
    , containers
  build-tool-depends:
      hspec-discover:hspec-discover
